sandbox/output
FizzBuzzHandler.java:3: error: constructor Object in class Object cannot be applied to given types;
        super(successor);
        ^
  required: no arguments
  found: Handler
  reason: actual and formal argument lists differ in length
FizzBuzzHandler.java:12: error: cannot find symbol
        return successor.handle(number);
               ^
  symbol:   variable successor
  location: class FizzBuzzHandler
2 errors
